--- a/src/App.css
+++ b/src/App.css
@@ -15,38 +15,57 @@
   top: 50%;
   transform: translate(-50%,-50%);
   width: fit-content;
+  animation-name: bounceContainer;
+  animation-iteration-count: 3;
+  animation-duration: 0.75s;
+  animation-delay: 0.25s;
 }
 
-/* .Center-container:hover {
-  background-color: yellow;
-}  */
-.Center-container .Circle-div:hover { 
-  background-color: green;
-  top: 5%;
-  left: 1%;
 
+@keyframes bounceContainer {
+0%, 100%{transform: translateY(0) translate(-50%,-50%);}
+50%{transform: translateY(-10px) translate(-50%,-50%);}
 }
+
+
 
 .Circle-div {
-  background: #222831;
+  /* background: #98E0C4; */
+  background: rgb(0 0 0 / 0);
   border-radius: 50%;
   width: 5vw;
   height: 5vw;
+  border: 3px solid black;
+
+  /* box-shadow: 0px -1px 9px 5px rgb(0 0 0 / 0.7); */
+}
+
+.circle-div-selected {
+  background-color: #a5cac6;
+  box-shadow: 0px -1px 9px 5px rgb(0 0 0 / 0.7);
 }
 
 .Circle-div:hover {
-  background-color: yellow;
-  /* animation: circleBounce infinite 1s linear; */
-  /* position: fixed; */
-  /* top: 5%; */
-}
+  /* #02162e */
+  background-color: #a5cac6;
+  box-shadow: 0px -1px 9px 5px rgb(0 0 0 / 0.7);
 
-@keyframes circleBounce {
-  0% {
-    left: 0px;
-    position: absolute;
-    top: 5%;
-  }
+  animation-name: bounce;
+  animation-duration: 0.75s;
+  animation-iteration-count: infinite;
+  animation-delay: 0.25s;
+} 
+
+@keyframes bounce {
+ 0%, 100%{transform: translateY(0);}
+ 50%{transform: translateY(-10px);}
+}
+.project-image {
+  position: relative;
+  width: 60%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
 }
 
 .my-picture {
@@ -77,21 +96,27 @@
 .close-emoji {
   margin: auto;  
   filter: grayscale(6);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   cursor: pointer;
   padding-left: 5%;
   font-size: 2vw;
+  font-weight: 350;
 }
+
+.main-container {
+  animation-duration: 3s;
+  animation-name: fadeIn;
+}
+
 .name-title {
   position: absolute;
   left: 38%;
   top: 8%;
   user-select: none;
   -webkit-user-drag: none;
-  animation-duration: 3s;
-  animation-name: fadeIn;
   font-family: Black Vosten Personal Use;
-  
 }
+
 @font-face {
   font-family: Black Vosten Personal Use;
   src: url('./black-font.ttf') format("truetype");
@@ -107,12 +132,9 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
-    filter: blur(10px);
   }
   to {
     opacity: 1;
-    filter: blur(0px);
-
   }
 }
 
@@ -135,9 +157,26 @@
   -webkit-user-drag: none;
 }
 
-
-
-
+#up-arrow-main {
+  top: 78%;
+  position: fixed;
+  width: 20%;
+  height: 20%;
+  max-width: 200px;
+  left: 44%;
+  transform: scaleX(-1) translate(-50%,-50%);
+}
+.main-text-container {
+  position: fixed;
+  right:15%;
+  top: 58%;
+  font-family: Black Vosten Personal Use;
+  max-width: 20%;
+}
+.main-text-projects{
+  font-weight: 200;
+  font-size: 3rem;
+}
 
 
 
